--- a/index.html
+++ b/index.html
@@ -401,7 +401,15 @@
             <div id=document>
                 <p>아아아</p>
             </div>
-         
+            <div id="comments" style="margin-top:40px;">
+                <script src="https://utteranc.es/client.js"
+                        repo="lonelydream/onlycomments"
+                        issue-term="pathname"
+                        theme="github-light"
+                        crossorigin="anonymous"
+                        async>
+                </script>
+        </div>
         </div>
             <div id="taskbar">
                 <div class="taskbar-left">
@@ -414,29 +422,6 @@
                     </a>
                     <div id="clock">--:--:--</div>
                 </div>
-            </div>
-        </div>
-        <div>
-            <div id="disqus_thread"></div>
-                <script>
-                    /**
-                    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-                    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-                    /*
-                    var disqus_config = function () {
-                    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-                    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-                    };
-                    */
-                    (function() { // DON'T EDIT BELOW THIS LINE
-                    var d = document, s = d.createElement('script');
-                    s.src = 'https://explain-android-and-love.disqus.com/embed.js';
-                    s.setAttribute('data-timestamp', +new Date());
-                    (d.head || d.body).appendChild(s);
-                    })();
-                </script>
-                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-        
             </div>
         </div>
     </main>
