--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             </div>
             <div id="comments" style="margin-top:40px;">
                 <script src="https://utteranc.es/client.js"
-                        repo="lonelydream/onlycomments"
+                        repo="lonelydream/test"
                         issue-term="pathname"
                         theme="github-light"
                         crossorigin="anonymous"
