--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         main {
             width: 100vw;
-            height: auto;
+            height: 100vh;
             background: linear-gradient(#00CCFF, #35D7FF, #69E2FF, #9EECFF, #D2F7FF);
             position: relative;
             display: flex;
