--- a/index.html
+++ b/index.html
@@ -293,12 +293,18 @@
         #comments iframe {
             width: 100% !important;
             max-width: 100% !important;
+            display: block !important;
+            min-height: 200px !important;
         }
         #content-scroll {
             flex: 1;
             overflow-y: auto;
             padding-right: 6px;
         }
+        #comments {
+            min-height: 200px;
+        }
+
         @keyframes shooting {
             0% {
                 transform: translate(0, 0) rotate(315deg);
