--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             </div>
             <div id="comments">
                 <script src="https://utteranc.es/client.js"
-                        repo="lonelydream/test"
+                        repo="lonelydream1024/test"
                         issue-term="pathname"
                         theme="github-light"
                         crossorigin="anonymous"
