--- a/index.html
+++ b/index.html
@@ -457,10 +457,10 @@
                         data-host="https://cusdis.com"
                         data-app-id="51335419-fd18-4828-bca6-561de14ef7da"
                         data-page-id="test"
-                        data-page-url="test"
+                        data-page-url="https://lonelydream1024.github.io/test/"
                         data-page-title="{{ PAGE_TITLE }}"
                         data-lang="ko"
-                        data-height="100">
+                        data-height="300">
                     </div>
                     <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
 
