--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                     </div>
                 </div>
                 <div id="ie-box">
-                    <h1 class="title">고철과 사랑의 인과관계를 설명하시오</h1>
+                    <h1 class="title">테스트페이지</h1>
                     <div id="document">
                         <p>아아아</p>
                     </div>
