--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             justify-content: flex-start; /* 제목은 위에 고정 */
             padding: 20px;
             overflow-y: auto;
+            position: relative;
         }
 
         #taskbar {
@@ -316,16 +317,17 @@
 
         #toggle-comments {
             position: absolute;
-            bottom: 10px;  /* ie-box 맨 아래에서 위쪽으로 10px */
-            right: 10px;   /* 오른쪽 끝 */
+            bottom: 10px;
+            right: 10px;
             z-index: 20;
             padding: 6px 12px;
             font-size: 14px;
             cursor: pointer;
             background: #E0E0E0;
             border: 2px outset #fff;
-            border-radius: 4px;
-        }        
+            border-radius: 4px;        
+            align-self: auto; /* flex 영향 제거 */
+        }
         #center-wrap {
             min-height: calc(100vh - 50px);
             display: flex;
@@ -367,7 +369,19 @@
                 overflow: hidden;
                 position: relative;
             }
-
+            #toggle-comments {
+                position: absolute;
+                bottom: 10px;
+                right: 10px;
+                padding: 6px 12px;
+                font-size: 14px;
+                cursor: pointer;
+                background: #E0E0E0;
+                border: 2px outset #fff;
+                border-radius: 4px;
+                z-index: 20;
+                align-self: auto; /* 모바일 flex 영향 제거 */
+            }            
             #taskbar {
                 position: relative;
                 z-index: 5;                 /* 별보다 위 */
@@ -394,7 +408,6 @@
                 padding-bottom: 0;
                 align-items: center; /* ← 세로 위 정렬 */
             }
-
 
             .icon-cell {
                 height: auto;
@@ -454,6 +467,7 @@
                     <div id="document">
                         <p>아아아</p>
                     </div>
+                    <div style="flex-grow: 1;"></div>
                     <button id="toggle-comments">댓글 보기</button>
                     <div id="cusdis_thread"
                         data-host="https://cusdis.com"
