--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
                 overflow-y: auto;
                 overflow: hidden;
                 position: relative;
+                color: black;
             }
             #toggle-comments {
                 position: absolute;
