--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@
                 border-radius: 4px;
                 z-index: 20;
                 align-self: auto; /* 모바일 flex 영향 제거 */
+                color: black;
             }            
             #taskbar {
                 position: relative;
